# pydeckard

./: .editorconfig  .env.example  .gitignore  .travis.yml  Pipfile  README.md  TODO.md  bot.py  config.example.py  config.py  dba.py  dev-requirements.txt  docker-compose.yml  fabfile.py  pydeckard.service  pydeckard.service.example  pyproject.toml  requirements.txt  run.sh  scraper.py  settings.py  test_utils.py  utils.py  vcs.py
.github/workflows/: python-app.yml
dba/: __init__.py  chat.py  core.py
pydeckard/: __init__.py  bot.py  config.py  utils.py
test/: test_bot_detection.py  test_replies.py  test_utils.py
